--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "antd": "4.18.6",
+    "@ant-design/icons": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
